플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -57,32 +57,44 @@
 			<label class="required">Length</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="uMinLength" th:value="${credentialsPolicy.uMinLength}" placeholder="Min."/>
+					<input type="number" name="uMinLength" th:value="${credentialsPolicy.uMinLength}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="uMaxLength" th:value="${credentialsPolicy.uMaxLength}" placeholder="Max."/>
+					<input type="number" name="uMaxLength" th:value="${credentialsPolicy.uMaxLength}" placeholder="Max."/>
 				</div>
+			</div>
+		</div>
+		<div class="field">
+			<div class="ui checkbox u-fg-only-lowercase">
+				<input type="checkbox" name="uFgOnlyLowercase" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.uFgOnlyLowercase == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
+				<label>Use Only Lower Case</label>
 			</div>
 		</div>
 		<div class="field">
 			<label>Lowercase</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="uMinLowercase" th:value="${credentialsPolicy.uMinLowercase}" placeholder="Min."/>
+					<input type="number" id="uMinLowercase" name="uMinLowercase" th:value="${credentialsPolicy.uMinLowercase}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="uMaxLowercase" th:value="${credentialsPolicy.uMaxLowercase}" placeholder="Max."/>
+					<input type="number" id="uMaxLowercase" name="uMaxLowercase" th:value="${credentialsPolicy.uMaxLowercase}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
 		<div class="field">
+			<div class="ui checkbox u-fg-only-uppercase">
+				<input type="checkbox" name="uFgOnlyUppercase" class="hidden" th:value="${T(org.jwebppy.platform.core.PlatformCommonVo).YES}" th:checked="${credentialsPolicy.uFgOnlyUppercase == T(org.jwebppy.platform.core.PlatformCommonVo).YES}" >
+				<label>Use Only Upper Case</label>
+			</div>
+		</div>		
+		<div class="field">
 			<label>Uppercase</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="uMinUppercase" th:value="${credentialsPolicy.uMinUppercase}" placeholder="Min."/>
+					<input type="number" id="uMinUppercase" name="uMinUppercase" th:value="${credentialsPolicy.uMinUppercase}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="uMaxUppercase" th:value="${credentialsPolicy.uMaxUppercase}" placeholder="Max."/>
+					<input type="number" id="uMaxUppercase" name="uMaxUppercase" th:value="${credentialsPolicy.uMaxUppercase}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -90,10 +102,10 @@
 			<label>Number</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="uMinNumber" th:value="${credentialsPolicy.uMinNumber}" placeholder="Min."/>
+					<input type="number" name="uMinNumber" th:value="${credentialsPolicy.uMinNumber}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="uMaxNumber" th:value="${credentialsPolicy.uMaxNumber}" placeholder="Max."/>
+					<input type="number" name="uMaxNumber" th:value="${credentialsPolicy.uMaxNumber}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -101,10 +113,10 @@
 			<label>Special</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="uMinSpecial" th:value="${credentialsPolicy.uMinSpecial}" placeholder="Min."/>
+					<input type="number" name="uMinSpecial" th:value="${credentialsPolicy.uMinSpecial}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="uMaxSpecial" th:value="${credentialsPolicy.uMaxSpecial}" placeholder="Max."/>
+					<input type="number" name="uMaxSpecial" th:value="${credentialsPolicy.uMaxSpecial}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -115,10 +127,10 @@
 			<label class="required">Length</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="pMinLength" th:value="${credentialsPolicy.pMinLength}" placeholder="Min."/>
+					<input type="number" name="pMinLength" th:value="${credentialsPolicy.pMinLength}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="pMaxLength" th:value="${credentialsPolicy.pMaxLength}" placeholder="Max."/>
+					<input type="number" name="pMaxLength" th:value="${credentialsPolicy.pMaxLength}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -126,10 +138,10 @@
 			<label>Lowercase</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="pMinLowercase" th:value="${credentialsPolicy.pMinLowercase}" placeholder="Min."/>
+					<input type="number" name="pMinLowercase" th:value="${credentialsPolicy.pMinLowercase}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="pMaxLowercase" th:value="${credentialsPolicy.pMaxLowercase}" placeholder="Max."/>
+					<input type="number" name="pMaxLowercase" th:value="${credentialsPolicy.pMaxLowercase}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -137,10 +149,10 @@
 			<label>Uppercase</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="pMinUppercase" th:value="${credentialsPolicy.pMinUppercase}" placeholder="Min."/>
+					<input type="number" name="pMinUppercase" th:value="${credentialsPolicy.pMinUppercase}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="pMaxUppercase" th:value="${credentialsPolicy.pMaxUppercase}" placeholder="Max."/>
+					<input type="number" name="pMaxUppercase" th:value="${credentialsPolicy.pMaxUppercase}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -148,10 +160,10 @@
 			<label>Number</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="pMinNumber" th:value="${credentialsPolicy.pMinNumber}" placeholder="Min."/>
+					<input type="number" name="pMinNumber" th:value="${credentialsPolicy.pMinNumber}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="pMaxNumber" th:value="${credentialsPolicy.pMaxNumber}" placeholder="Max."/>
+					<input type="number" name="pMaxNumber" th:value="${credentialsPolicy.pMaxNumber}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -159,10 +171,10 @@
 			<label>Special</label>
 			<div class="fields">
 				<div class="eight wide field">
-					<input type="text" name="pMinSpecial" th:value="${credentialsPolicy.pMinSpecial}" placeholder="Min."/>
+					<input type="number" name="pMinSpecial" th:value="${credentialsPolicy.pMinSpecial}" placeholder="Min."/>
 				</div>
 				<div class="eight wide field">
-					<input type="text" name="pMaxSpecial" th:value="${credentialsPolicy.pMaxSpecial}" placeholder="Max."/>
+					<input type="number" name="pMaxSpecial" th:value="${credentialsPolicy.pMaxSpecial}" placeholder="Max."/>
 				</div>
 			</div>
 		</div>
@@ -179,6 +191,88 @@
 $(document).ready(function() {
 	$(".menu .item").tab();
 	$(".ui.checkbox").checkbox();
+	
+	$(".ui.checkbox.u-fg-only-lowercase").checkbox({
+		onChecked: function()
+		{
+			enabledUsernameOnlyLowercase(true);
+		},
+		onUnchecked: function()
+		{
+			enabledUsernameOnlyLowercase(false);
+		}
+	});
+	
+	$(".ui.checkbox.u-fg-only-uppercase").checkbox({
+		onChecked: function()
+		{
+			enabledUsernameOnlyUppercase(true);
+		},
+		onUnchecked: function()
+		{
+			enabledUsernameOnlyUppercase(false);
+		}
+	});
+	
+	function enabledUsernameOnlyLowercase(isEnabled)
+	{
+		if (isEnabled)
+		{
+			$(".ui.checkbox.u-fg-only-uppercase").checkbox("uncheck").checkbox("set disabled");
+			clickUsernameOnlyLowercase(true);
+			clickUsernameOnlyUppercase(true);			
+		}
+		else
+		{
+			$(".ui.checkbox.u-fg-only-uppercase").checkbox("uncheck").checkbox("set enabled");
+			clickUsernameOnlyLowercase(false);
+			clickUsernameOnlyUppercase(false);			
+		};
+	};
+	
+	function enabledUsernameOnlyUppercase(isEnabled)
+	{
+		if (isEnabled)
+		{
+			$(".ui.checkbox.u-fg-only-lowercase").checkbox("uncheck").checkbox("set disabled");;
+			clickUsernameOnlyLowercase(true);
+			clickUsernameOnlyUppercase(true);			
+		}
+		else
+		{
+			$(".ui.checkbox.u-fg-only-lowercase").checkbox("uncheck").checkbox("set enabled");;
+			clickUsernameOnlyLowercase(false);
+			clickUsernameOnlyUppercase(false);			
+		};
+	};
+	
+	function clickUsernameOnlyLowercase(isChecked)
+	{
+		if (isChecked)
+		{
+			$("#uMinLowercase").attr("disabled", true).val("");
+			$("#uMaxLowercase").attr("disabled", true).val("");			
+		}
+		else
+		{
+			$("#uMinLowercase").attr("disabled", false);
+			$("#uMaxLowercase").attr("disabled", false);
+		};
+	};
+	
+	function clickUsernameOnlyUppercase(isChecked)
+	{
+		if (isChecked)
+		{
+			$("#uMinUppercase").attr("disabled", true).val("");
+			$("#uMaxUppercase").attr("disabled", true).val("");			
+		}
+		else
+		{
+			$("#uMinUppercase").attr("disabled", false);
+			$("#uMaxUppercase").attr("disabled", false);			
+		};
+	};	
 	
 	$("#FORM_write").form(formValidCheck);
 	
@@ -203,6 +297,16 @@ $(document).ready(function() {
 			});
 		};			
 	});
+	
+	if (JpUtilsString.equals("[[${credentialsPolicy.uFgOnlyLowercase}]]", "Y"))
+	{
+		enabledUsernameOnlyLowercase(true);
+	};
+	
+	if (JpUtilsString.equals("[[${credentialsPolicy.uFgOnlyUppercase}]]", "Y"))
+	{
+		enabledUsernameOnlyUppercase(true);
+	};	
 });
 
 let formValidCheck = {
