--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/list.html
@@ -584,7 +584,7 @@ $(document).ready(function() {
 
 		if (checkedCount == 0)
 		{
-			JpUiDimmer.alert("Please select the target to copy.", function() {
+			JpUiDimmer.alert("Please select a target to copy.", function() {
 				return;
 			});
 		};
@@ -595,7 +595,7 @@ $(document).ready(function() {
 				return;
 			});			
 		};
-
+		
 		$("#FORM_copyToCreate").form("reset");
 
 		$("#MDL_coptyToCreate")
