--- a/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/change_password.html
@@ -122,7 +122,7 @@ function doSubmit()
 					let message = "";
 					
 					$.each(result.MESSAGE, function (index, value) {
-						message += value + "\n";
+						message += value + "<br/>";
 					});
 					
 					JpUiDimmer.alert(message, function() {
