--- a/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/authority/list.html
@@ -9,11 +9,11 @@
   Authority
   <div class="sub header">Authorities has roles and groups. You can create or modify the authorities and check users who belong to each of them.</div>
 </div>
-<div class="ui segment">
-	<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
-	<input type="checkbox" name="cSeq" style="display:none" value="" checked />
-	<input type="hidden" name="pageNumber" value="1"/>
-	<input type="hidden" name="rowPerPage" value="10"/>
+<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
+<input type="checkbox" name="cSeq" style="display:none" value="" checked />
+<input type="hidden" name="pageNumber" value="1"/>
+<input type="hidden" name="rowPerPage" value="10"/>
+<div class="ui grey attached segment">
 	<div class="fields">
 		<div class="six wide field">
 			<select name="type" class="ui search dropdown">
@@ -22,7 +22,7 @@
 				<option th:value="${T(org.jwebppy.platform.mgmt.content.dto.CItemType).G}" th:text="${T(org.jwebppy.platform.mgmt.content.dto.CItemType).G.type}"></option>
 			</select>
 		</div>
-	</div>		
+	</div>
 	<div class="fields">
 		<div class="twelve wide field">
 			<div class="ui icon input">
@@ -34,48 +34,48 @@
 			<div class="ui button" onclick="document.location.reload()"><i class="redo icon"></i> Reset</div>
 		</div>
 	</div>
-	<div class="ui divider"></div>
-	<div class="ui one column grid">
-		<div class="column">
-			<div id="BTN_create" class="ui teal button"><i class="plus icon"></i> Create</div>
-			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
-		</div>
+</div>
+<div class="ui divider"></div>
+<div class="ui one column grid">
+	<div class="column">
+		<div id="BTN_create" class="ui teal button"><i class="plus icon"></i> Create</div>
+		<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
 	</div>
-	<div id="TBL_authority"></div>
-	</form>
-	<div class="ui segment" id="AREA_viewAuthorityDetail" style="display:none;">
-		<div class="ui header"></div>
+</div>
+<div id="TBL_authority"></div>
+</form>
+<div class="ui segment" id="AREA_viewAuthorityDetail" style="display:none;">
+	<div class="ui header"></div>
+	<div class="ui clearing divider"></div>
+	<div id="TAB_viewAuthorityDetail" class="ui secondary pointing menu">
+		<a class="item active wrap" data-tab="general">General</a>
+		<a class="item wrap" data-tab="user">User</a>
+		<a class="item wrap" data-tab="authority">Sub Authority</a>
+	</div>
+	<div class="AREA_moveToModifyAuthority" style="display:none;">
+		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
 		<div class="ui clearing divider"></div>
-		<div id="TAB_viewAuthorityDetail" class="ui secondary pointing menu">
-			<a class="item active wrap" data-tab="general">General</a>
-			<a class="item wrap" data-tab="user">User</a>
-			<a class="item wrap" data-tab="authority">Sub Authority</a>
-		</div>
-		<div class="AREA_moveToModifyAuthority" style="display:none;">
-			<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-			<div class="ui clearing divider"></div>
-		</div>
-		<div class="AREA_modifyAuthority" style="display:none;">
-			<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
-			<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
-			<div class="ui clearing divider"></div>
-		</div>
-		<form id="FORM_modifyAuthority" class="ui form" autocomplete="off" onsubmit="return false;">
-			<input type="hidden" name="cSeq" />
-			<div class="ui tab active attached segment teal" data-tab="general"></div>
-			<div class="ui tab attached" data-tab="user"></div>
-			<div class="ui tab attached segment teal" data-tab="authority"></div>
-		</form>
-		<div class="AREA_moveToModifyAuthority" style="display:none;">
-			<div class="ui clearing divider"></div>
-			<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>				
-		</div>			
-		<div class="AREA_modifyAuthority" style="display:none;">
-			<div class="ui clearing divider"></div>
-			<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
-			<div class="ui button modify BTN_cancel"> Cancel</div>				
-		</div>			
 	</div>
+	<div class="AREA_modifyAuthority" style="display:none;">
+		<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
+		<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
+		<div class="ui clearing divider"></div>
+	</div>
+	<form id="FORM_modifyAuthority" class="ui form" autocomplete="off" onsubmit="return false;">
+		<input type="hidden" name="cSeq" />
+		<div class="ui tab active attached segment teal" data-tab="general"></div>
+		<div class="ui tab attached" data-tab="user"></div>
+		<div class="ui tab attached segment teal" data-tab="authority"></div>
+	</form>
+	<div class="AREA_moveToModifyAuthority" style="display:none;">
+		<div class="ui clearing divider"></div>
+		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>				
+	</div>			
+	<div class="AREA_modifyAuthority" style="display:none;">
+		<div class="ui clearing divider"></div>
+		<div class="ui teal button modify BTN_save"><i class="check icon"></i> Save</div>
+		<div class="ui button modify BTN_cancel"> Cancel</div>				
+	</div>			
 </div>
 <script>
 $(document).ready(function() {
