--- a/jwebppy/src/main/resources/templates/platform/mgmt/conn_resource/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/conn_resource/list.html
@@ -9,10 +9,10 @@
 	SAP Connection Resource
 	<div class="sub header">This platform offers how to access functions of SAP using JCO and you need to set up the connection info. first.</div>
 </div>
-<div class="ui segment">
-	<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
-	<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
-	<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
+<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
+<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
+<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
+<div class="ui grey attached segment">
 	<div class="fields">	
 		<div class="twelve wide field">
 			<div class="ui icon input">
@@ -24,21 +24,21 @@
 			<div class="ui button" onclick="document.location.reload()"><i class="undo icon"></i> Reset</div>
 		</div>
 	</div>
-	</form>
-	<div class="ui divider"></div>
-	<div class="ui one column grid">
-		<div class="column">
-			<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
-			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
-			<div id="BTN_use" class="ui teal button"><i class="toggle on icon"></i> Use</div>
-			<div id="BTN_disuse" class="ui teal button"><i class="toggle off icon"></i> Disuse</div>
-		</div>
-	</div>	
-	<div class="ui divider"></div>
-	<form id="FORM_write">
-	<div id="TBL_list"></div>
-	</form>
 </div>
+</form>
+<div class="ui divider"></div>
+<div class="ui one column grid">
+	<div class="column">
+		<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
+		<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
+		<div id="BTN_use" class="ui teal button"><i class="toggle on icon"></i> Use</div>
+		<div id="BTN_disuse" class="ui teal button"><i class="toggle off icon"></i> Disuse</div>
+	</div>
+</div>	
+<div class="ui divider"></div>
+<form id="FORM_write">
+<div id="TBL_list"></div>
+</form>
 <script>
 let listTable;
 
