--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
@@ -6,13 +6,13 @@
 
 <th:block layout:fragment="content">
 <div class="ui dividing header">
-  User Group
-  <div class="sub header">Users can be classified according to regions, sales divisions, types of customers so on.</div>
+	User Group
+	<div class="sub header">Users can be classified according to regions, sales divisions, types of customers so on.</div>
 </div>
-<div class="ui segment">
-	<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
-	<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
-	<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
+<form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
+<input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
+<input type="hidden" id="rowPerPage" name="rowPerPage"  th:value="${rowPerPage}"/>
+<div class="ui grey attached segment">
 	<div class="fields">	
 		<div class="twelve wide field">
 			<div class="ui icon input">
@@ -24,19 +24,19 @@
 			<div class="ui button" onclick="document.location.reload()"><i class="undo icon"></i> Reset</div>
 		</div>
 	</div>
-	</form>
-	<div class="ui divider"></div>
-	<div class="ui one column grid">
-		<div class="column">
-			<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
-			<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
-		</div>
-	</div>	
-	<div class="ui divider"></div>
-	<form id="FORM_write">
-	<div id="TBL_list"></div>
-	</form>
 </div>
+</form>
+<div class="ui divider"></div>
+<div class="ui one column grid">
+	<div class="column">
+		<div id="BTN_new" class="ui teal button"><i class="plus icon"></i> New</div>
+		<div id="BTN_delete" class="ui teal button"><i class="minus icon"></i> Delete</div>
+	</div>
+</div>	
+<div class="ui divider"></div>
+<form id="FORM_write">
+<div id="TBL_list"></div>
+</form>
 <script>
 let listTable;
 
