--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/view.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/view.html
@@ -12,7 +12,7 @@
 <div class="ui one column grid">
 	<div class="column">
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
+		<div class="ui teal button BTN_delete" style="display:none;"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
 <div class="ui divider"></div>
@@ -21,7 +21,7 @@
 <div class="ui one column grid">
 	<div class="column">
 		<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-		<div class="ui teal button BTN_delete"><i class="minus icon"></i> Delete</div>
+		<div class="ui teal button BTN_delete" style="display:none;"><i class="minus icon"></i> Delete</div>
 	</div>
 </div>
 <form id="FORM_view" class="ui form" autocomplete="off" onsubmit="return false;">
@@ -35,6 +35,11 @@ $(document).ready(function() {
 		success: function(data, textStatus, jqXHR)
 		{
 			$("#contentArea").html(new JpUiRender().render(data));
+			
+			if ($("input[name=userCount]").val() == 0)
+			{
+				$(".BTN_delete").show();
+			};
 			
 			$("a.sap-conn-resource").on("click", function() {
 				JpUiPopup.open({
