--- a/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/content/view.html
@@ -10,57 +10,57 @@
   Content
   <div class="sub header">You're able to create new pages, menus and roles. The contents can be translated into other languages.</div>
 </div>
-	<div class="ui stackable grid">
-		<div class="row">
-			<div class="nine wide column">
-				<div class="ui dividing header">Structure</div>
-				<div class="ui segment teal">
-					<div id="TREE_items"></div>
-				</div>
+<div class="ui stackable grid">
+	<div class="row">
+		<div class="nine wide column">
+			<div class="ui dividing header">Structure</div>
+			<div class="ui segment teal">
+				<div id="TREE_items"></div>
 			</div>
-			<div class="seven wide column">
-				<div id="AREA_createItem" class="field">
-					<div class="ui dividing header">Attributes</div>
-					<div id="TAB_viewItem" class="ui secondary pointing menu">
-						<a class="item active wrap" data-tab="general">General</a>
-						<a class="item wrap" data-tab="language">Language</a>
-					</div>
-					<form id="FORM_modify" class="ui form">
-					<input type="hidden" name="cSeq"/>
-					<input type="hidden" name="pSeq"/>
-						<div class="AREA_modify" style="display: none;">
-							<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
-							<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
-							<div class="ui clearing divider"></div>									
-						</div>
-						<div class="AREA_moveToModify" style="display: none;">
-							<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-							<div class="ui clearing divider"></div>
-						</div>
-						<div class="AREA_moveToViewLang" style="display: none;">
-							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-							<div class="ui clearing divider"></div>
-						</div>
-						<div class="ui segment tab teal" data-tab="general"></div>
-						<div class="ui segment tab teal" data-tab="language"></div>
-						<div class="AREA_modify" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
-							<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
-						</div>
-						<div class="AREA_moveToModify" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
-						</div>
-						<div class="AREA_moveToViewLang" style="display: none;">
-							<div class="ui clearing divider"></div>
-							<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
-						</div>								
-					</form>
+		</div>
+		<div class="seven wide column">
+			<div id="AREA_createItem">
+				<div class="ui dividing header">Attributes</div>
+				<div id="TAB_viewItem" class="ui secondary pointing menu">
+					<a class="item active wrap" data-tab="general">General</a>
+					<a class="item wrap" data-tab="language">Language</a>
 				</div>
+				<form id="FORM_modify" class="ui form">
+				<input type="hidden" name="cSeq"/>
+				<input type="hidden" name="pSeq"/>
+					<div class="AREA_modify" style="display: none;">
+						<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+						<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
+						<div class="ui clearing divider"></div>									
+					</div>
+					<div class="AREA_moveToModify" style="display: none;">
+						<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
+						<div class="ui clearing divider"></div>
+					</div>
+					<div class="AREA_moveToViewLang" style="display: none;">
+						<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+						<div class="ui clearing divider"></div>
+					</div>
+					<div class="ui segment tab teal" data-tab="general"></div>
+					<div class="ui segment tab teal" data-tab="language"></div>
+					<div class="AREA_modify" style="display: none;">
+						<div class="ui clearing divider"></div>
+						<div class="ui teal button BTN_save"><i class="check icon"></i> Save</div>
+						<div class="ui button modify BTN_cancel"><i class="times icon"></i> Cancel</div>
+					</div>
+					<div class="AREA_moveToModify" style="display: none;">
+						<div class="ui clearing divider"></div>
+						<div class="ui teal button BTN_modify"><i class="edit outline icon"></i> Modify</div>
+					</div>
+					<div class="AREA_moveToViewLang" style="display: none;">
+						<div class="ui clearing divider"></div>
+						<div class="ui teal button BTN_translation"><i class="globe icon"></i> Translation</div>
+					</div>								
+				</form>
 			</div>
 		</div>
 	</div>
+</div>
 <form id="FORM_updateLang" method="post">
 <input type="hidden" name="cSeq"/>
 <input type="hidden" name="lSeq"/>
