--- a/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/platform/common/authentication/login.html
@@ -83,7 +83,7 @@ function setFocus()
 function resizeView()
 {
 	$("#IMG_main").width($(window).width());
-	$("#IMG_main").height($(window).height());
+	//$("#IMG_main").height($(window).height());
 };
 
 function checkForm()
@@ -185,7 +185,7 @@ function showLoginBox()
 };
 </script>
 </head>
-<body>
+<body style="background-color: #000;">
 <div id="openNewWindow" style="position: fixed; top: 5px; right: 5px; cursor: pointer; font-weight: bold;">New Window</div>
 <form id="FORM_login" method="post" th:action="${T(org.jwebppy.platform.core.PlatformConfigVo).FORM_LOGIN_PROCESSING_URL}">
 <input type="hidden" id="saveUsername" name="saveUsername" value="Y" />
