플랫폼 개발

--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/list.html
@@ -7,7 +7,7 @@
 <th:block layout:fragment="content">
 <div class="ui dividing header">
 	Credentials Policy
-	<div class="sub header">You can manage credentials policy such as username and password.</div>
+	<div class="sub header">You can manage credentials policy such as username or password.</div>
 </div>
 <form id="FORM_search" class="ui form" autocomplete="off" onsubmit="return false;">
 <input type="hidden" id="pageNumber" name="pageNumber"  th:value="${pageNumber}"/>
